CHANGES for LIRE
================

2013-04-20
==========
  - Changed internal file handling of ParallelIndexer
  - Clean-up in EdgeHistogramImplementation
  - Made footprint of EdgeHistogram smaller (40 bytes compared to 320 bytes)
  - Made footprint of JCD smaller (84 bytes instead of 1344 bytes)
  - Made footprint of ColorLayout smaller (2*6*21 = 504 bytes instead of 4*2*28*64 = 14336 bytes)
  - That's only 4% of the space these three descriptors used, reduced by stuffing bytes.
  - PHOG needs 30*21 = 630 bytes
  - Added indexing routine to build.xml

2013-04-19
==========
  - Tuned PHOG & BitSampling parameters to reduce index size
  - Changed ParallelIndexer to create hashes by default.

2013-04-18
==========
  - Added file list option to ParallelIndexer
  - Tuned PHOG parameters to get a smaller feature

2013-04-15
==========
  - Added hash based approach for CEDD to DocumentBuilderFactory and ImageSearcherFactory
  - Added command line parameters to ParallelIndexer, it can be run from shell.
  - Deleted unused DocumentBuilder and ImageSearcher implementations
  - Optimized PHOG runtime a little bit

2013-04-15
==========
  - Moved serialized hash functions to classpath & SVN.
  - Added GZIP compression to hash file.
  - Fixed bug in PHOG: Far too many bins were created.
  - Added a producer-consumer version of the indexer as ParallelIndexer.
  - Parallelized TestWang
  - Added hashing to GenericDocumentBuilder.
  - Added ParallelIndexing to sample application.

2013-04-12
==========
  - Added BitSamplingImageSearcher

2013-04-11
==========
  - Added method to BitSampling
  - Removed printStackTrace from Extractor

2013-04-08
==========
  - Added security check to BitSampling.generateHashes not to overwrite hash file on disk.
  - Added additional error message to Indexor.
  - Changed signature of SimpleImageSearchHits to support a simple web app.

2013-04-06
==========
  - Fixed bug with transparency channel in PHOG.

2013-04-06
==========