@@ -32,9 +32,11 @@
  * URL: http://www.morganclaypool.com/doi/abs/10.2200/S00468ED1V01Y201301ICR025
  *
  * Copyright statement:
- * --------------------
+ * ====================
  * (c) 2002-2013 by Mathias Lux (mathias@juggle.at)
- *     http://www.semanticmetadata.net/lire, http://www.lire-project.net
+ *  http://www.semanticmetadata.net/lire, http://www.lire-project.net
+ *
+ * Updated: 21.04.13 08:59
  */
 
 package net.semanticmetadata.lire.impl;
@@ -46,6 +48,8 @@ import net.semanticmetadata.lire.DocumentBuilder;
 import net.semanticmetadata.lire.imageanalysis.SurfFeature;
 import org.apache.lucene.document.Document;
 import org.apache.lucene.document.Field;
+import org.apache.lucene.document.StoredField;
+import org.apache.lucene.document.StringField;
 
 import java.awt.image.BufferedImage;
 import java.util.Iterator;
@@ -57,6 +61,24 @@ import java.util.List;
  * Time: 15:41:28
  */
 public class SurfDocumentBuilder extends AbstractDocumentBuilder {
+
+
+    @Override
+    public Field[] createDescriptorFields(BufferedImage image) {
+        Field[] result = null;
+        Surf s = new Surf(image);
+        List<SURFInterestPoint> interestPoints = s.getFreeOrientedInterestPoints();
+        result = new Field[interestPoints.size()];
+        int count = 0;
+        for (Iterator<SURFInterestPoint> sipi = interestPoints.iterator(); sipi.hasNext(); ) {
+            SURFInterestPoint sip = sipi.next();
+            SurfFeature sf = new SurfFeature(sip);
+            result[count] = (new StoredField(DocumentBuilder.FIELD_NAME_SURF, sf.getByteArrayRepresentation()));
+            count++;
+        }
+        return result;
+    }
+
     public Document createDocument(BufferedImage image, String identifier) {
         Document doc = null;
         Surf s = new Surf(image);
@@ -65,10 +87,10 @@ public class SurfDocumentBuilder extends AbstractDocumentBuilder {
         for (Iterator<SURFInterestPoint> sipi = interestPoints.iterator(); sipi.hasNext(); ) {
             SURFInterestPoint sip = sipi.next();
             SurfFeature sf = new SurfFeature(sip);
-            doc.add(new Field(DocumentBuilder.FIELD_NAME_SURF, sf.getByteArrayRepresentation()));
+            doc.add(new StoredField(DocumentBuilder.FIELD_NAME_SURF, sf.getByteArrayRepresentation()));
         }
         if (identifier != null)
-            doc.add(new Field(DocumentBuilder.FIELD_NAME_IDENTIFIER, identifier, Field.Store.YES, Field.Index.NOT_ANALYZED));
+            doc.add(new StringField(DocumentBuilder.FIELD_NAME_IDENTIFIER, identifier, Field.Store.YES));
         return doc;
     }
 }
